[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.7"
envy = "0.4.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["process", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "*"

[profile.release]
lto = true
strip = true
