[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
envy = "0.4.2"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = true
strip = true
