[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
envy = "0.4.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.release]
lto = true
strip = true
